--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <style>
 body {
-    background: lightgreen;
-    font-family: Verdana;
+    background: black;
+    font-family: Times New Roman;
 }  
 #content {
     background: lightyellow;
