--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body {
     font-family: Times New Roman;
 }  
 #content {
-    background: lightyellow;
+    background: Black;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
@@ -30,21 +30,20 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Domingos Bailote</h1>
+        <h2>Senior in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a Biblical Counseling major at Bob Jones University. I also work in management for a gym near campus. .</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
+            I attend Summit Church in Simpsonville SC. My favorite website is  
             <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            <a href="mailto:dbail770@students.bju.edu">here</a>.
          </p> 
          <p>
             I enjoy listening to podcasts and having deep conversations.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Biblical Counseling<br />
         Bob Jones University<br />
         Example image:
         <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
