--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body {
     font-family: Times New Roman;
 }  
 #content {
-    background: Black;
+    background: White;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
